# Knowledge-Graph-Kit

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  config.json  pyproject.toml  tmux_notes.txt
.gemini/: settings.json
app/: config.py  containers.py  crud.py  database.py  dependencies.py  main.py  models.py  state.py  test.py  vector_store.py
app/tools/: note.py  person.py  project.py  shared.py  task.py  tool.py
data/: edges.json  nodes.json
scripts/: migrate_to_sqlite.py  start_mcp.sh  sync_db_to_vector_store.py
specs/: app_spec.md  current_architecture.md  implementation_plan.md
tests/: test_crud.py  test_models.py  test_state.py  test_tools.py  test_vector_store.py
tests/integration/: conftest.py
tests/integration/tools/: test_notes_integration.py  test_person_integration.py  test_project_integration.py  test_shared_integration.py  test_task_integration.py
tests/tools/: test_note.py  test_person.py  test_project.py  test_shared.py  test_task.py
tests/unit/: test_crud.py  test_models.py  test_vector_store.py
tests/unit/tools/: conftest.py  test_note.py  test_person.py  test_project.py  test_shared.py  test_task.py
