[project]
name = "knowledge-graph-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "sqlalchemy",
    "sentence-transformers",
    "chromadb",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools]
packages = ["app"]